2008-01-16  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules: Updated dbus to 1.1.3
	aka 1.2.0RC1 ("If nothing is found to be wrong with this release 
	it will become 1.2.0 within a week"). Better test it...

2008-01-15  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.22.modules: Add missing
	dependencies for cheese and vinagre.

2008-01-15  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.22.modules: gnome-panel now
	needs libgweather and librsvg. Plus add PolicyKit* as <suggests>.

2008-01-15  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules: Added to exempi module
	autogenargs="--enable-unittest=no". Unfortunately it seems that
	libopenraw needs Boost.
	
2008-01-14  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-suites-2.22.modules: Remove duplicate libgweather
	entry.

2008-01-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/cvs.py, jhbuild/versioncontrol/svn.py: never
	wipe dir in update mode  (see: #509365)

2008-01-14  Callum McKenzie  <callum@spooky-possum.org>

	* modulesets/gnome-suites-2.22.modules: Add libgweather and make
	gnome-applets depend on it.

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.22.modules: add ndesk-dbus and
	ndesk-dbus-glib
	* modulesets/gnome-suites-2.22.modules: add ndesk-dbus and
	ndesk-dbus-glib dep for tomboy

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.22.modules: move mousetweaks to gnome-suites-2.22
	* modulesets/gnome-suites-2.22.modules: add mousetweaks (using GNOME
	svn now), add definition for git.freedesktop.org for swfdec-gnome

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.22.modules: remove swfdec* (swfdec-mozilla is
	still available in freedesktop.modules)
	* modulesets/gnome-external-deps-2.22.modules: add swfdec
	* modulesets/gnome-suites-2.22.modules: move swfdec-gnome here, even
	if it's not yet in GNOME svn.
