@@ -1,3 +1,7 @@
+2008-01-16  Frederic Peters  <fpeters@0d.be>
+
+	* Makefile.am: add files that should be part of .tar.gz
+
 2008-01-16  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-external-deps-2.22.modules: Updated dbus to 1.1.3
